--- a/styles/project.css
+++ b/styles/project.css
@@ -40,6 +40,7 @@ background:mediumspringgreen;}
 border:1px solid white;
 box-shadow:0 5px 10px rgba(0, 0, 0, 0.4);
 background:mediumspringgreen;}
+div p{font-family:'Niconne, cursive;'}
 
-p{font-family:'Niconne, cursive;'}
+
 
